Bug 390042 - can't change ledger sort options in configure dialog
Summary: can't change ledger sort options in configure dialog
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-07 21:12 UTC by Dave Nelson
Modified: 2018-02-12 21:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.1
Sentry Crash Report:


Attachments
Case (273.94 KB, video/mp4)
2018-02-11 10:31 UTC, LanMan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dave Nelson 2018-02-07 21:12:06 UTC
Version 5.0.80-09ffa40a

compiled from source (i'm very grateful for that)

In Configure KMyMoney | Ledger | Sorting | all 3 views

none of the buttons has any effect.
they become enabled when item selected, 
but nothing more happens so can't change sort sequence.
Comment 1 LanMan 2018-02-11 10:31:55 UTC
Created attachment 110529 [details]
Case

A similar problem. Uploaded video with error playback.

Also a problem - not always buttons are active.
On the video: 
0:08 - the "Сумма" and "Состояние сверки" fields - the "Up" button is not active.
Comment 2 LanMan 2018-02-11 10:41:44 UTC
(In reply to LanMan from comment #1)
> Created attachment 110529 [details]
> Case

Forgot to specify the version: 5.0.0-2, on Arch Linux
Comment 3 Zoltan Puskas 2018-02-12 01:23:54 UTC
Can confirm the same issue happening on Gentoo with app-office/kmymoney-5.0.0.
Comment 4 Thomas Baumgart 2018-02-12 07:34:42 UTC
Git commit 125b366e321683483850c70bfbc5c19a7c02ae02 by Thomas Baumgart.
Committed on 12/02/2018 at 07:34.
Pushed by tbaumgart into branch '5.0'.

Connect signals to slots in transaction sort dialog

The buttons and widget list signals were not connected to any
functionality. Hence the dialog's functionality was broken. This change
introduces the connections and cleans up some unused code.
FIXED-IN: 5.0.1

M  +20   -34   kmymoney/widgets/transactionsortoption.cpp
M  +2    -4    kmymoney/widgets/transactionsortoption.h

https://commits.kde.org/kmymoney/125b366e321683483850c70bfbc5c19a7c02ae02
Comment 5 Dave Nelson 2018-02-12 21:03:23 UTC
I applied the patches and it now works as expected.

BTW, I'm running ubuntu bionic which has webKit 5.43, kmm uses 5.42, but a symlink to 5.43 seems to run ok, at least so far.

Thank you Thomas for the speedy resolution.