Connect signals to slots in transaction sort dialog

The buttons and widget list signals were not connected to any
functionality. Hence the dialog's functionality was broken. This change
introduces the connections and cleans up some unused code.

BUG: 390042
FIXED-IN: 5.0.1